--- a/server/package.json
+++ b/server/package.json
@@ -7,15 +7,16 @@
     "start": "node --loader tsx server.ts"
   },
   "dependencies": {
-    "express": "^4.19.2",
+    "@supabase/supabase-js": "^2.57.4",
     "cors": "^2.8.5",
     "coze-coding-dev-sdk": "^0.7.3",
-    "@supabase/supabase-js": "^2.57.4",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "zhipuai": "^2.0.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "tsx": "^4.21.0"
   }
 }
