--- a/database/data/knowledge-graph.json
+++ b/database/data/knowledge-graph.json
@@ -23,6 +23,7 @@
             "prerequisites": ["g4-n1"],
             "difficulty": 2,
             "skillDimension": ["计算","理解"],
+            "masteryLevels": [0,1,2,3,4],
             "keyConcepts": ["进位","退位","竖式"],
             "learningObjectives": ["正确进行竖式加减","理解进退位原理"],
             "is_core": true
@@ -33,6 +34,7 @@
             "prerequisites": ["g4-n2"],
             "difficulty": 3,
             "skillDimension": ["计算","建模"],
+            "masteryLevels": [0,1,2,3,4],
             "keyConcepts": ["分配律","竖式","部分积"],
             "learningObjectives": ["掌握标准竖式算法","能建立乘法模型"],
             "is_core": true
@@ -43,6 +45,7 @@
             "prerequisites": ["g4-n3"],
             "difficulty": 3,
             "skillDimension": ["计算","理解"],
+            "masteryLevels": [0,1,2,3,4],
             "keyConcepts": ["试商","商位","余数"],
             "learningObjectives": ["会正确试商","理解余数意义"],
             "is_core": true
@@ -53,6 +56,7 @@
             "prerequisites": ["g4-n3","g4-n4"],
             "difficulty": 3,
             "skillDimension": ["推理","计算"],
+            "masteryLevels": [0,1,2,3,4],
             "keyConcepts": ["运算顺序","括号"],
             "learningObjectives": ["掌握运算顺序","能正确计算表达式"],
             "is_core": true
@@ -74,6 +78,7 @@
             "prerequisites": [],
             "difficulty": 3,
             "skillDimension": ["理解","建模"],
+            "masteryLevels": [0,1,2,3,4],
             "keyConcepts": ["整体","分子分母","等值分数"],
             "learningObjectives": ["理解分数意义","能判断等值分数"],
             "is_core": true
@@ -84,6 +89,7 @@
             "prerequisites": ["g5-n1"],
             "difficulty": 3,
             "skillDimension": ["计算","理解"],
+            "masteryLevels": [0,1,2,3,4],
             "keyConcepts": ["通分","最小公倍数"],
             "learningObjectives": ["会正确通分","能进行分数加减"],
             "is_core": true
@@ -94,6 +100,7 @@
             "prerequisites": [],
             "difficulty": 3,
             "skillDimension": ["理解"],
+            "masteryLevels": [0,1,2,3,4],
             "keyConcepts": ["十分位","百分位","位值"],
             "learningObjectives": ["理解小数位值","能读写小数"],
             "is_core": true
@@ -104,6 +111,7 @@
             "prerequisites": ["g5-n3"],
             "difficulty": 3,
             "skillDimension": ["计算"],
+            "masteryLevels": [0,1,2,3,4],
             "keyConcepts": ["小数点对齐","进退位"],
             "learningObjectives": ["会正确对齐小数点","准确计算"],
             "is_core": true
@@ -112,8 +120,9 @@
             "id": "g5-n5",
             "name": "小数乘除法",
             "prerequisites": ["g5-n4"],
-            "difficulty": 4,
+            "difficulty": 3,
             "skillDimension": ["计算","推理"],
+            "masteryLevels": [0,1,2,3,4],
             "keyConcepts": ["位数移动","积商定位"],
             "learningObjectives": ["掌握小数乘除法规则"],
             "is_core": true
@@ -124,6 +133,7 @@
             "prerequisites": [],
             "difficulty": 3,
             "skillDimension": ["理解","推理"],
+            "masteryLevels": [0,1,2,3,4],
             "keyConcepts": ["倍数","因数","质数","合数"],
             "learningObjectives": ["能分解因数","判断质合数"],
             "is_core": true
@@ -145,6 +155,7 @@
             "prerequisites": ["g5-n2"],
             "difficulty": 3,
             "skillDimension": ["计算","建模"],
+            "masteryLevels": [0,1,2,3,4],
             "keyConcepts": ["倒数","约分","乘除转化"],
             "learningObjectives": ["掌握分数乘除法","能进行约分化简"],
             "is_core": true
@@ -155,6 +166,7 @@
             "prerequisites": ["g6-n1"],
             "difficulty": 3,
             "skillDimension": ["理解","建模"],
+            "masteryLevels": [0,1,2,3,4],
             "keyConcepts": ["百分比","分数小数互化"],
             "learningObjectives": ["理解百分数意义","能互化表示"],
             "is_core": true
@@ -163,8 +175,9 @@
             "id": "g6-n3",
             "name": "百分数应用（折扣、增长率）",
             "prerequisites": ["g6-n2"],
-            "difficulty": 4,
+            "difficulty": 3,
             "skillDimension": ["建模","推理"],
+            "masteryLevels": [0,1,2,3,4],
             "keyConcepts": ["基数","现值","变化率"],
             "learningObjectives": ["会建立百分数应用模型"],
             "is_core": true
@@ -173,8 +186,9 @@
             "id": "g6-n4",
             "name": "比与比例",
             "prerequisites": ["g6-n2"],
-            "difficulty": 4,
+            "difficulty": 3,
             "skillDimension": ["推理","建模"],
+            "masteryLevels": [0,1,2,3,4],
             "keyConcepts": ["比值","比例式","交叉相乘"],
             "learningObjectives": ["会化简比","能解比例问题"],
             "is_core": true
@@ -183,8 +197,9 @@
             "id": "g6-n5",
             "name": "圆的认识与面积",
             "prerequisites": [],
-            "difficulty": 4,
+            "difficulty": 3,
             "skillDimension": ["理解","计算"],
+            "masteryLevels": [0,1,2,3,4],
             "keyConcepts": ["半径","直径","π","面积公式"],
             "learningObjectives": ["掌握圆面积计算"],
             "is_core": true
@@ -195,6 +210,7 @@
             "prerequisites": ["g6-n2"],
             "difficulty": 3,
             "skillDimension": ["理解","分析"],
+            "masteryLevels": [0,1,2,3,4],
             "keyConcepts": ["比例","扇形","数据分析"],
             "learningObjectives": ["能解读扇形统计图"],
             "is_core": true
