--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,16 @@
-# 环境变量文件（包含敏感信息）
-# 忽略实际环境变量文件
-.env
-.env.local
-.env.*.local
-.env.development
-.env.production
-.env.test
-server/.env
-
-# 允许提交模板文件
-!.env.example
-!.env.template
-
-# 依赖
+# Dependencies
 node_modules/
-server/node_modules/
 .pnpm-store/
-# package-lock.json # 保留package-lock.json用于依赖版本锁定
 
-# 构建输出
+# Build outputs
 dist/
 dist-ssr/
 *.local
-.vite/
-coverage/
 
-# 日志
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-# 编辑器
+# Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-.idea/
+.idea
 .DS_Store
 *.suo
 *.ntvs*
@@ -44,11 +18,33 @@ lerna-debug.log*
 *.sln
 *.sw?
 
-# 系统文件
-Thumbs.db
-.cache/
-temp/
-tmp/
+# Environment variables
+.env
+.env.local
+.env.production
+.env.development
+.env.example
 
-# Trae IDE
-.trae/
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Testing
+coverage/
+.nyc_output/
+
+# Misc
+.DS_Store
+*.pem
+.cache/
+
+# Supabase
+.supabase/
+
+# Express server
+server/node_modules/
