chore: 更新版本到1.1.0并添加CHANGELOG
- 更新版本号从1.0.0到1.1.0
- 添加CHANGELOG.md更新日志
- 修复Supabase Edge Function环境变量和认证问题
- 统一智谱AI模型版本为glm-4.7
- 添加API客户端库和API日志数据库迁移
- 清理临时文件和测试文件
- 更新.gitignore配置

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,38 @@ coverage/
 
 # Express server
 server/node_modules/
+
+.vercel
+
+# Test files
+test-*.js
+test-*.mjs
+diagnose-*.js
+check-*.js
+deploy-*.js
+view-*.js
+update-*.js
+update-*.mjs
+
+# Temporary files
+*.backup
+*.temp
+*.tmp
+
+# Trae AI documents
+.trae/
+
+# Temporary Edge Functions
+supabase/functions/*-test/
+supabase/functions/*-auth/
+supabase/functions/*-fixed/
+supabase/functions/simple-test/
+supabase/functions/test-*/
+supabase/functions/public-test/
+
+# Temporary documentation
+AUTH_IMPLEMENTATION.md
+DEPLOYMENT_TEST_SUMMARY.md
+EDGE_FUNCTION_401_ANALYSIS.md
+GLM4_FLASH_TEST_REPORT.md
+ZHIPU_API_TEST_REPORT.md
